--- a/projects/一文搞定深度学习建模预测全流程(Python)/deep_learning_demo.ipynb
+++ b/projects/一文搞定深度学习建模预测全流程(Python)/deep_learning_demo.ipynb
@@ -17,6 +17,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "author：算法进阶\n",
+    "https://github.com/aialgorithm/Blog\n",
+    "\"\"\"\n",
     "from keras.datasets import boston_housing #导入波士顿房价数据集\n",
     "\n",
     "\n",
