--- a/projects/一文详解RNN及实战(Python)/RNN-股票预测.ipynb
+++ b/projects/一文详解RNN及实战(Python)/RNN-股票预测.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "author：算法进阶\n",
+    "https://github.com/aialgorithm/Blog\n",
+    "\"\"\"\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
@@ -521,13 +526,7 @@
       "1382/1382 [==============================] - 0s 74us/step - loss: 1.7089e-04 - val_loss: 0.0024\n",
       "Epoch 149/500\n",
       "1382/1382 [==============================] - 0s 80us/step - loss: 1.6986e-04 - val_loss: 0.0024\n",
-      "Epoch 150/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 150/500\n",
       "1382/1382 [==============================] - 0s 74us/step - loss: 1.7014e-04 - val_loss: 0.0023\n",
       "Epoch 151/500\n",
       "1382/1382 [==============================] - 0s 71us/step - loss: 1.6900e-04 - val_loss: 0.0024\n",
@@ -829,13 +828,7 @@
       "1382/1382 [==============================] - 0s 80us/step - loss: 1.4441e-04 - val_loss: 0.0019\n",
       "Epoch 297/500\n",
       "1382/1382 [==============================] - 0s 71us/step - loss: 1.4535e-04 - val_loss: 0.0018\n",
-      "Epoch 298/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 298/500\n",
       "1382/1382 [==============================] - 0s 67us/step - loss: 1.4555e-04 - val_loss: 0.0019\n",
       "Epoch 299/500\n",
       "1382/1382 [==============================] - 0s 69us/step - loss: 1.4544e-04 - val_loss: 0.0020\n",
@@ -1137,13 +1130,7 @@
       "1382/1382 [==============================] - 0s 73us/step - loss: 1.4437e-04 - val_loss: 0.0016\n",
       "Epoch 445/500\n",
       "1382/1382 [==============================] - 0s 80us/step - loss: 1.3991e-04 - val_loss: 0.0017\n",
-      "Epoch 446/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 446/500\n",
       "1382/1382 [==============================] - 0s 73us/step - loss: 1.3993e-04 - val_loss: 0.0017\n",
       "Epoch 447/500\n",
       "1382/1382 [==============================] - 0s 79us/step - loss: 1.3892e-04 - val_loss: 0.0018\n",
