--- a/projects/LSTM/lstm.ipynb
+++ b/projects/LSTM/lstm.ipynb
@@ -2,8 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "7545e4cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-e117cf62cb2f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdataset\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# 构建模型\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m model = tf.keras.Sequential([\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dataset'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from dataset import tokenizer\n",
+    "\n",
+    "# 构建模型\n",
+    "model = tf.keras.Sequential([\n",
+    "    # 不定长度的输入\n",
+    "    tf.keras.layers.Input((None,)),\n",
+    "    # 词嵌入层\n",
+    "    tf.keras.layers.Embedding(input_dim=tokenizer.vocab_size, output_dim=128),\n",
+    "    # 第一个LSTM层，返回序列作为下一层的输入\n",
+    "    tf.keras.layers.LSTM(128, dropout=0.5, return_sequences=True),\n",
+    "    # 第二个LSTM层，返回序列作为下一层的输入\n",
+    "    tf.keras.layers.LSTM(128, dropout=0.5, return_sequences=True),\n",
+    "    # 对每一个时间点的输出都做softmax，预测下一个词的概率\n",
+    "    tf.keras.layers.TimeDistributed(tf.keras.layers.Dense(tokenizer.vocab_size, activation='softmax')),\n",
+    "])\n",
+    "\n",
+    "# 查看模型结构\n",
+    "model.summary()\n",
+    "# 配置优化器和损失函数\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(), loss=tf.keras.losses.categorical_crossentropy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "36796a2b",
+   "id": "d59e83e7",
    "metadata": {},
    "outputs": [],
    "source": []
