--- a/projects/LSTM/lstm.ipynb
+++ b/projects/LSTM/lstm.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ed707add",
    "metadata": {},
    "outputs": [
@@ -368,36 +368,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-5-3d82ab0655a5>:30: Model.fit_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-5-6b5b2ab89a7a>:30: Model.fit_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use Model.fit, which supports generators.\n",
       "Epoch 1/2\n",
-      "1534/1534 [==============================] - ETA: 0s - loss: 4.8169cun'h\n",
-      "春叶风烟有，花客长深里。秋家人落香，月里千不烟。\n",
-      "春知夜山下，花远别南天。秋事云入衣，月客云入，\n",
-      "春玉心来色，花云马人客。秋有复归人，月上未夜里。\n",
-      "春多何月客，花千江尽思。秋里夜年多，月山山日，\n",
-      "春日海秋东，花日有酒中。秋客心花客，月来深烟然。\n",
-      "1534/1534 [==============================] - 152s 99ms/step - loss: 4.8169\n",
-      "Epoch 2/2\n",
-      "1534/1534 [==============================] - ETA: 0s - loss: 4.3516cun'h\n",
-      "春山千年落，花舟竹林回。秋寺千不处，月事入清分。\n",
-      "春南清阳望，花心出自闲。秋云江望满，月路满江归。\n",
-      "春日流江里，花似楚乡声。秋水落里冷，月落秋天同。\n",
-      "春里何北在，花人去家飞。秋闻何高发，月灯老中流。\n",
-      "春来无上尽，花月寄上开。秋花夜日下，月边有门深。\n",
-      "1534/1534 [==============================] - 153s 100ms/step - loss: 4.3516\n"
+      " 203/1534 [==>...........................] - ETA: 6:18 - loss: 5.7500"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x212f48c3ca0>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -431,7 +407,7 @@
     "# 创建数据集\n",
     "data_generator = PoetryDataGenerator(poetry, random=True)\n",
     "# 开始训练\n",
-    "model.fit_generator(data_generator.for_fit(), steps_per_epoch=data_generator.steps, epochs=TRAIN_EPOCHS,\n",
+    "model.fit_generator(data_generator.for_fit(), steps_per_epoch=data_generator.steps,workers=-1,epochs=TRAIN_EPOCHS,\n",
     "                    callbacks=[Evaluate()])\n"
    ]
   },
@@ -445,29 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2c41a98b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "输入关键字:\n",
-      "算法进阶\n",
-      "算十仙年山，法是寄一林。进门南来满，阶山忆寒声。 \n",
-      "\n",
-      "算尽来路宿，法月几如枝。进寒无年事，阶声复里开。 \n",
-      "\n",
-      "算知朝南上，法门与声愁。进觉归云火，阶照树人头。 \n",
-      "\n",
-      "算人春下远，法如更如中。进是归中别，阶落鸟归残。 \n",
-      "\n",
-      "算夜白深石，法为玉神天。进随秋来处，阶中暮处迟。 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "输入关键字，生成藏头诗\n",
