--- a/projects/LSTM/lstm.ipynb
+++ b/projects/LSTM/lstm.ipynb
@@ -26,7 +26,7 @@
     "# 每个epoch训练完成后，随机生成SHOW_NUM首古诗作为展示\n",
     "SHOW_NUM = 5\n",
     "# 共训练多少个epoch\n",
-    "TRAIN_EPOCHS = 2\n",
+    "TRAIN_EPOCHS = 1\n",
     "# 最佳权重保存路径\n",
     "BEST_MODEL_PATH = './best_model.h5'"
    ]
@@ -361,6 +361,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3f9d2cd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ed707add",
    "metadata": {},
    "outputs": [
@@ -368,12 +376,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-5-6b5b2ab89a7a>:30: Model.fit_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-5-a6c30794d98e>:30: Model.fit_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use Model.fit, which supports generators.\n",
-      "Epoch 1/2\n",
-      " 203/1534 [==>...........................] - ETA: 6:18 - loss: 5.7500"
+      "1534/1534 [==============================] - ETA: 0s - loss: 4.9044cun'h\n",
+      "春万中外客，花回下声水。秋秋云山日，月江月向回。\n",
+      "春江千烟地，花风水青。秋三归月，月明前迟。\n",
+      "春千山春，花南君然。秋山将无，月一不山。\n",
+      "春子金相，花游草。秋中无雨，月鸟未人。\n",
+      "春江烟色有去，花边见心云人中。秋日来事金飞寺，月高日家深开。\n",
+      "1534/1534 [==============================] - 435s 284ms/step - loss: 4.9044\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1d7663f7a30>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -407,7 +430,7 @@
     "# 创建数据集\n",
     "data_generator = PoetryDataGenerator(poetry, random=True)\n",
     "# 开始训练\n",
-    "model.fit_generator(data_generator.for_fit(), steps_per_epoch=data_generator.steps,workers=-1,epochs=TRAIN_EPOCHS,\n",
+    "model.fit_generator(data_generator.for_fit(), steps_per_epoch=data_generator.steps,workers=-1,use_multiprocessing=True,epochs=TRAIN_EPOCHS,\n",
     "                    callbacks=[Evaluate()])\n"
    ]
   },
@@ -421,10 +444,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2c41a98b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "输入关键字:\n",
+      "算法进阶\n",
+      "算江有国，法朝长玉。进远无露，阶月夜寒。 \n",
+      "\n",
+      "算雨从无秋，法朝日人深。进楼雪上不，阶鸟孤门流。 \n",
+      "\n",
+      "算烟空此尽，法楼玉边人。进人清外水，阶此满似见。 \n",
+      "\n",
+      "算风天如去里，法别到见中日？相花飞月不水，进来长有同关。阶门一风去， \n",
+      "\n",
+      "算从旧事，法秋南生。进山人相客，阶为流城风。 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "输入关键字，生成藏头诗\n",
